--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "^9.35.0",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-perfectionist": "^4.15.0",
+    "express-rate-limit": "^8.1.0",
     "husky": "^9.1.7",
     "jest": "^30.1.3",
     "lint-staged": "^16.1.6",
